# AeroInteract3D

./: .gitignore  AGENT.md  DEVELOPMENT.md  Makefile  README.md  README.zh-CN.md  main.py  pyproject.toml  test.py
src/: constants.py  contract.md  contract.zh-CN.md  contract_stub.md  contract_stub.zh-CN.md  contracts.py  ports.py
src/bridge/: README.md  README.zh-CN.md  service.py  service_stub.py
src/gesture/: DEPTH_LIMITATIONS.md  README.md  README.zh-CN.md  __init__.py  main.py  runtime.py  service.py  service_impl.py  service_impl_annotated.py  service_stub.py  temporal.py  workflow.md
src/gesture/debug/: __init__.py  __main__.py  live_preview.py  live_preview_runtime.py  runtime.py
src/rendering/: README.md  README.zh-CN.md  service.py  service_stub.py
src/utils/: contracts.py  runtime.py
tests/: __init__.py  debug_video.py  test_bridge_service.py  test_gesture_runtime.py  test_gesture_service.py  test_gesture_service_impl.py  test_gesture_service_stub.py  test_gesture_temporal.py  test_main.py  test_rendering_service.py
