[project]
name = "aero-interact-3d"
version = "0.1.0"
description = "AeroInteract3D: Real-time 3D mid-air interaction prototype."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10.32",
    "opencv-python>=4.13.0.92",
    "numpy>=2.2.0",
    "panda3d>=1.10.15",
    "types-panda3d>=0.4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.13.0",
]

[tool.uv]
default-groups = ["dev"]